Code clean